--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     </tr>
   </table>
   <a href="my_hobbies.html">My Hobbies</a>
+  <a href ="my_contact.html">My Contacts</a>
 </body>
 
 </html>
